--- a/custom_components/noonlight/manifest.json
+++ b/custom_components/noonlight/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "noonlight",
   "name": "Noonlight",
-  "documentation": "https://www.home-assistant.io/components/noonlight",
+  "documentation": "https://github.com/konnected-io/noonlight-hass",
   "requirements": [
     "noonlight==0.1.1"
   ],
