Added version number to manifest and add support for second contact in the noonlight alert

--- a/custom_components/noonlight/manifest.json
+++ b/custom_components/noonlight/manifest.json
@@ -1,6 +1,7 @@
 {
   "domain": "noonlight",
   "name": "Noonlight",
+  "version": "1.0.3",
   "documentation": "https://github.com/konnected-io/noonlight-hass",
   "requirements": [
     "noonlight==0.1.1"
