--- a/custom_components/noonlight/manifest.json
+++ b/custom_components/noonlight/manifest.json
@@ -1,9 +1,12 @@
 {
   "domain": "noonlight",
   "name": "Noonlight (Snuffy2)",
+  "after_dependencies": [],
   "codeowners": ["@heythisisnate", "@snicker", "@Snuffy2"],
   "dependencies": ["http", "switch"],
   "documentation": "https://github.com/Snuffy2/noonlight-hass",
+  "integration_type": "device",
+  "iot_class": "cloud_polling",
   "requirements": ["noonlight>=0.1.1"],
   "version": "1.1.0"
 }
