--- a/.github/workflows/ha_and_hacs_validate.yml
+++ b/.github/workflows/ha_and_hacs_validate.yml
@@ -9,12 +9,14 @@ on:
 
 jobs:
   ha_and_hacs_validation:
-    runs-on: "ubuntu-latest"
+    runs-on: ubuntu-latest
     steps:
-      - uses: "actions/checkout@v4.1.3"
+      - name: Checkout
+        uses: actions/checkout@v4.1.3
       - name: Hassfest validation
-        uses: "home-assistant/actions/hassfest@master"
+        uses: home-assistant/actions/hassfest@master
       - name: HACS validation
-        uses: "hacs/action@22.5.0"
+        uses: hacs/action@22.5.0
         with:
-          category: "integration"
+          category: integration
+          ignore: brands
