--- a/custom_components/noonlight/manifest.json
+++ b/custom_components/noonlight/manifest.json
@@ -7,6 +7,7 @@
   "documentation": "https://github.com/Snuffy2/noonlight-hass",
   "integration_type": "device",
   "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/Snuffy2/noonlight-hass/issues",
   "requirements": ["noonlight>=0.1.1"],
   "version": "1.1.0"
 }
